SQuirreL SQL FX Change Log
==============================

Bug fix: Alias properties --> Editing schema table didn't work.

Feature: SQL errors are now displayed as tool tips: If the mouse pointer is held over an error (word marked red) the tool tip is shown.

Feature: SQL history combo box and history search dialog.

Feature: SQL results can be edited when only one table was selected.

Bug fix: Cursor didn't blink inside the SQL editor although the editor was focused.

Bug fix: Run SQL didn't work on MS-Windows when the SQL editor contained mor than one statement

Bug fix: SQL Editor hung on MS-Windows a new line was entered.

Bug fix: Reasonable default for home directory: <user.home>/.squirrel-sql-fx

Feature: Integration of SQL parser
 - Highlighting of SQL syntax errors
 - Support of table alias names in code completion

Feature: Syntax highlighting based on
 - Tomas Mikula's Code Area component. See https://github.com/TomasMikula/RichTextFX
 - Fifesoft's RSyntaxTextArea for SQL token marking. See http://fifesoft.com/rsyntaxtextarea/

Feature: Open SQL editor tabs for existing Session

Feature: Menu bar including Session menu

Feature: Alias schema loading has a new check box which allows to hide empty schema or catalog nodes in the object tree.

Bug fix: Reading object tree details failed if some meta data where not accessible e.g. for privilege reasons on MySQL
Bug fix: Schema loading configuration did not work for databases with catalogs but no schemas, e.g. MySQL.


Features of initial snapshot:
- Drivers
- Aliases including schema loading properties
- Session with Object tree and SQL execution
- SQL Code completion